--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -13,5 +13,6 @@
         <% end %>
     </li>
     <p class="back_to_home"><%= link_to "Go Back to List", "/tasks" %></p>
+    <p class="back_to_home"><%= link_to "Edit Task", edit_task_path %></p>
   </ul>
 </div>
