--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -8,7 +8,7 @@
         <%= f.check_box :completed %>
         <% end %>
         <%= link_to task.title, task_path(task) %>
-        <%= link_to "🗑", task_path(task), method: :delete %>
+        <%= link_to "🗑", task_path(task), method: :delete, data: { confirm: "Are you sure?" } %>
       </li>
     <% end %>
   </ul>
